# rag-2026

./: .buildinfo  .gitignore  genindex.html  imprint.html  intro.html  main.py  objects.inv  pyproject.toml  readme.md  search.html  searchindex.js
00_preparation/: readme.html
01_text-embeddings/: 01_generate.html  02_compute_embeddings.html  03_plot.html
02_vision-embeddings/: download.html  readme.html  vision_embeddings_umap.html  z_cleanup.html
02_vision-embeddings-slides/: sliceplot.html  vision_embeddings_umap.html
03_rag/: 20-simple-rag.html  household-products.html
04_rag_advanced/: chat-with-hpc-compendium.html  readme.html
_downloads/944aa301e35eac5180d443cd4a94cd24/: spec_gnu-barnard.cfg
_downloads/d5f7725d1634a1906984026bcb34b683/: spec_nvhpc-alpha.cfg
_sources/: intro.md
_sources/00_preparation/: readme.md
_sources/01_text-embeddings/: 01_generate.ipynb  02_compute_embeddings.ipynb  03_plot.ipynb
_sources/02_vision-embeddings/: download.ipynb  readme.md
_sources/02_vision-embeddings-slides/: sliceplot.ipynb
_sources/03_rag/: 20-simple-rag.ipynb  household-products.md
_sources/04_rag_advanced/: chat-with-hpc-compendium.ipynb  readme.md
docs/: _config.yml  _toc.yml  intro.md
docs/00_preparation/: readme.md
docs/01_text-embeddings/: 01_generate.ipynb  02_compute_embeddings.ipynb  03_plot.ipynb  phd_topics.csv
docs/02_vision-embeddings/: download.ipynb  readme.md  vision_embeddings_umap.ipynb  z_cleanup.ipynb
docs/02_vision-embeddings-slides/: data.csv  vision_embeddings_umap.ipynb
docs/03_rag/: 20-simple-rag.ipynb
(+283 files in other folders)
